Add native image build info; clean up outdated info.